--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -12,7 +12,7 @@
         <td *ngFor="let oneField of fields">
           <div *ngIf="oneField.type=='image'" class="divImg">
             <img *ngIf="getByStringKey(onerow,oneField.key)!=''" src="{{getByStringKey(onerow,oneField.key)}}">
-            <img *ngIf="getByStringKey(onerow,oneField.key)==''" src="../../../assets/images/clothes-hanger.jpg">
+            <img *ngIf="getByStringKey(onerow,oneField.key)==''" src="assets/images/clothes-hanger.jpg">
           </div>
 
           <span *ngIf="oneField.type=='string'"> {{onerow[oneField.key]}}</span>
