status in abstract product

--- a/src/app/modal/confirm/confirm.component.html
+++ b/src/app/modal/confirm/confirm.component.html
@@ -2,12 +2,12 @@
   <div class="cd-popup-container">
     <div class="swal2-icon swal2-warning" style="display: block;">!</div>
     <h4>{{"MODAL.CONFIRMDELETE.AREYOUSURE?"| translate}}</h4>
-    <p>{{"MODAL.CONFIRMDELETE.YOUWANTTODELETE"| translate}}</p>
+    <p>{{"MODAL.CONFIRMDELETE."+title| translate}}</p>
     <ul class="cd-buttons">
-      <li (click)="close()">
-        {{"MODAL.CONFIRMDELETE.YESDELETEIT"| translate}}
+      <li (click)="yes()">
+        {{"MODAL.CONFIRMDELETE."+yesButton| translate}}
       </li>
-      <li>
+      <li (click)="close()">
         {{"MODAL.CONFIRMDELETE.NOTHANKS"| translate}}
       </li>
     </ul>
