--- a/src/app/pages/products/add-product/add-product.component.html
+++ b/src/app/pages/products/add-product/add-product.component.html
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <div class="col-sm col-sm-6">
+      <!-- <div class="col-sm col-sm-6">
         <div class="form-group">
           <label for="type">{{'GLOBAL.STATUS'|translate}}</label>
           <select formControlName="status" class="form-control">
@@ -32,7 +32,7 @@
           <label *ngIf="productForm.get('status').invalid && isSubmitted"
             class="text-danger errorLabel">{{'ERROR_FORM.ERROR_FIELD_REQUIRED'|translate}}</label>
         </div>
-      </div>
+      </div> -->
 
       <div class="col-sm col-sm-6">
         <div class="form-group">
