--- a/src/app/pages/abstract-products/show-abstract-product/show-abstract-product.component.html
+++ b/src/app/pages/abstract-products/show-abstract-product/show-abstract-product.component.html
@@ -45,6 +45,15 @@
     </div>
     <div class="col-sm col-sm-6">
       <div class="form-group">
+        <b for="type">{{'GLOBAL.ORDER'|translate}}</b>
+        <label>
+          {{abstractProduct.order}}
+        </label>
+      </div>
+    </div>
+
+    <div class="col-sm col-sm-6">
+      <div class="form-group">
         <b for="type">{{'GLOBAL.CREATED_AT'|translate}}</b>
         <label>{{formatDate(abstractProduct.createdAt)}}</label>
       </div>
@@ -59,13 +68,13 @@
 
   <div class="row">
     <div class="col-sm submit-col">
-      <button  (click)="back()" class="btn btn-danger" type="button">
+      <button (click)="back()" class="btn btn-danger" type="button">
         {{"GLOBAL.BACK"|translate}}
       </button>
     </div>
   </div>
 
-  <div  class="row" style="padding: 10px 0px;">
+  <div class="row" style="padding: 10px 0px;">
     <button (click)="addProduct()" class="btn btn-success" style="float: right;" type="button">
       {{"GLOBAL.ADDPRODUCT"|translate}}
     </button>
