--- a/src/app/pages/centers/list-center/list-center.component.html
+++ b/src/app/pages/centers/list-center/list-center.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row"  style="padding-bottom: 10px;">
+  <div class="row"  style="padding-bottom: 10px; margin: 0px;">
     <button (click)="addCenter()" class="btn btn-success" style="float: right;" type="button">
       {{"GLOBAL.ADDCENTER"|translate}}
     </button>
