--- a/src/app/pages/users/list-user/list-user.component.html
+++ b/src/app/pages/users/list-user/list-user.component.html
@@ -1,11 +1,11 @@
 <div class="container">
 
-  <div class="row" style="padding-bottom: 10px;">
+  <div class="row" style="padding-bottom: 10px;margin: 0px;">
     <button (click)="addUser()" class="btn btn-success" style="float: right;" type="button">
       {{"GLOBAL.ADDUSER"|translate}}
     </button>
   </div>
-  <div class="row">
+  <div class="row" style="margin: 0px;">
     <div class="form-group">
       <input class="form-control" (change)="getFilter()" [(ngModel)]="filter.mobile__icontains" type="text"
         placeholder="{{'GLOBAL.SEARCHBY'|translate}} {{'GLOBAL.MOBILE'|translate}}">
