--- a/src/app/pages/abstract-products/abstract-product-order/abstract-product-order.component.html
+++ b/src/app/pages/abstract-products/abstract-product-order/abstract-product-order.component.html
@@ -18,7 +18,7 @@
   <ng-template let-item>
     <div class="sortable-list-item item">
       <div class="orderBox">
-        <p>{{arrayAbstractProduct.length - arrayAbstractProduct.indexOf(item)}}</p>
+        <p>{{arrayAbstractProduct.indexOf(item)+1}}</p>
       </div>
       <div class="img">
         <img src="{{item.images[0].file}}">
