--- a/src/app/shared/date-filter/date-filter.component.html
+++ b/src/app/shared/date-filter/date-filter.component.html
@@ -1,5 +1,5 @@
-  <div class="row" style="margin: 0px;">
-    <div class="col-sm-4" *ngFor="let oneDate of dateFilter;let index=index">
+  <div class="row" style="">
+    <div class="col-sm-5" *ngFor="let oneDate of dateFilter;let index=index">
       <div class="input-group md-date-pic" style="max-width: 300px;">
         <material-datepicker placeholder="{{'GLOBAL.'+oneDate.label | translate}}" (onSelect)="changeDateChild(index)"
           [(date)]="oneDate.value" class="cal-cont">
