--- a/src/app/pages/order/list-order/list-order.component.html
+++ b/src/app/pages/order/list-order/list-order.component.html
@@ -15,6 +15,11 @@
       <app-input-search [type]="'number'" (changeValue)="changeValueParent($event)" [placeholder]="'GLOBAL.MOBILE'">
       </app-input-search>
     </div>
+    <div class="col-md-3">
+      <app-input-search [type]="'text'" (changeValue)="changeInvoiceParent($event)" [placeholder]="'GLOBAL.INVOICE'">
+      </app-input-search>
+    </div>
+
   </div>
   <div class="row">
     <div class="col-md-9">
